--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "argsense"
-version = "0.4.3a0"
+version = "0.5.0a0"
 homepage = "https://github.com/likianta/argsense-cli"
 description = "New command line interface based on Python Rich library."
 readme = "README.md"
@@ -14,7 +14,7 @@ default = true
 
 [tool.poetry.dependencies]
 python = "^3.8"
-rich = ""
+rich = "*"
 
 [tool.poetry.extras]
 
