--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "argsense"
-version = "1.0.0a0"
+version = "1.0.0a5"
 homepage = "https://github.com/likianta/argsense-cli"
 description = "New command line interface based on Python Rich library."
 readme = "README.md"
@@ -18,7 +18,7 @@ rich = "*"
 textual = "*"
 
 [tool.poetry.scripts]
-argsense = 'argsense.__main__:run'
+argsense = 'argsense.__main__:tui'
 
 [build-system]
 requires = ["poetry"]
