feat: add GUI mode (based on PSG)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,11 +14,14 @@ default = true
 
 [tool.poetry.dependencies]
 python = "^3.8"
+pysimplegui = "*"
 rich = "*"
 textual = "*"
 
 [tool.poetry.scripts]
-argsense = 'argsense.__main__:tui'
+argsense-cli = 'argsense.__main__:cli'
+argsense-gui = 'argsense.__main__:gui'
+argsense-tui = 'argsense.__main__:tui'
 
 [build-system]
 requires = ["poetry"]
