--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "argsense"
-version = "0.5.7"
+version = "0.5.8"
 homepage = "https://github.com/likianta/argsense-cli"
 description = "New command line interface based on Python Rich library."
 readme = "README.md"
@@ -9,7 +9,7 @@ license = "MIT"
 
 [tool.poetry.dependencies]
 python = "^3.8"
-pysimplegui = { version = "*", optional = true }
+pysimplegui = { version = "^5.0.0", optional = true }
 rich = "^13.0.0"
 # TODO
 #   textual = "*"
