--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,9 @@ pysimplegui = { version = "^5.0.0", optional = true }
 [tool.poetry.extras]
 gui = ["pysimplegui"]  # pip install argsense[gui]
 
+[tool.poetry.group.dev.dependencies]
+pyinstrument = "^5.0.0"
+
 [[tool.poetry.source]]
 name = "tsinghua"
 url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
