--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "argsense"
-version = "0.6.0b9"
+version = "0.6.0b10"
 homepage = "https://github.com/likianta/argsense-cli"
 description = "New command line interface based on Rich library."
 readme = "README.md"
@@ -25,6 +25,7 @@ pysimplegui = { version = "^5.0.0", optional = true }
 gui = ["pysimplegui"]  # pip install argsense[gui]
 
 [tool.poetry.group.dev.dependencies]
+lk-utils = "^3.1.1"
 pyapp-window = { version = "^2.2.0a3", source = "likianta-host" }
 pyinstrument = "^5.0.0"
 
