--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "argsense"
-version = "0.7.0a0"
+version = "0.7.0a2"
 homepage = "https://github.com/likianta/argsense-cli"
 description = "New command line interface based on Rich library."
 readme = "README.md"
@@ -25,8 +25,8 @@ pysimplegui = { version = "^5.0.0", optional = true }
 gui = ["pysimplegui"]  # pip install argsense[gui]
 
 [tool.poetry.group.dev.dependencies]
-lk-utils = { version = "^3.1.3a2", source = "likianta-host" }
-pyapp-window = { version = "^2.2.0a11", source = "likianta-host" }
+lk-utils = { version = "^3.1.3a3", source = "likianta" }
+pyapp-window = { version = "^2.2.0a12", source = "likianta" }
 pyinstrument = "^5.0.0"
 
 [[tool.poetry.source]]
@@ -35,7 +35,7 @@ url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
 priority = "primary"
 
 [[tool.poetry.source]]
-name = "likianta-host"
+name = "likianta"
 url = "http://likianta.pro:2131/"
 priority = "supplemental"
 
