--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "argsense"
-version = "0.7.0b12"
+version = "0.7.0"
 homepage = "https://github.com/likianta/argsense-cli"
 description = "New command line interface based on Rich library."
 readme = "README.md"
@@ -20,8 +20,7 @@ argsense-tui = "argsense.__main__:tui"
 
 [tool.poetry.dependencies]
 python = "^3.8"
-# lk-logger = "^6.0.3"
-lk-logger = { version = "^6.0.4a0", source = "likianta" }
+lk-logger = "^6.0.4"
 rich = "^13.9.0"
 # rich-gradient = { version = "^0.1.7", python = "^3.10" }
 
@@ -34,6 +33,7 @@ pysimplegui = { version = "^5.0.0", optional = true }
 #   trogon = "*"
 
 [tool.poetry.group.dev.dependencies]
+lk-logger = { version = "^6.0.4", source = "likianta" }
 lk-utils = { version = "^3.1.3a3", source = "likianta" }
 pyapp-window = { version = "^2.2.0a12", source = "likianta" }
 pyinstrument = "^5.0.0"
