--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "argsense"
-version = "0.7.0"
+version = "0.7.1a1"
 homepage = "https://github.com/likianta/argsense-cli"
 description = "New command line interface based on Rich library."
 readme = "README.md"
@@ -37,6 +37,7 @@ lk-logger = { version = "^6.0.4", source = "likianta" }
 lk-utils = { version = "^3.1.3a3", source = "likianta" }
 pyapp-window = { version = "^2.2.0a12", source = "likianta" }
 pyinstrument = "^5.0.0"
+streamlit = { version = "^1.42.0", python = "^3.12" }
 
 [[tool.poetry.source]]
 name = "tsinghua"
