--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "argsense"
-version = "0.7.2"
+version = "1.0.0a1"
 homepage = "https://github.com/likianta/argsense-cli"
 description = "New command line interface based on Rich library."
 readme = "README.md"
@@ -22,7 +22,6 @@ argsense-tui = "argsense.__main__:tui"
 python = "^3.8"
 lk-logger = "^6.0.4"
 rich = "^13.9.0"
-# rich-gradient = { version = "^0.1.7", python = "^3.10" }
 
 # --- TODO: GUI
 pysimplegui = { version = "^5.0.0", optional = true }
