--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "argsense"
-version = "1.0.0a1"
+version = "1.0.0"
 homepage = "https://github.com/likianta/argsense-cli"
 description = "New command line interface based on Rich library."
 readme = "README.md"
@@ -20,7 +20,7 @@ argsense-tui = "argsense.__main__:tui"
 
 [tool.poetry.dependencies]
 python = "^3.8"
-lk-logger = "^6.0.4"
+lk-logger = "^6.0.5"
 rich = "^13.9.0"
 
 # --- TODO: GUI
@@ -33,10 +33,10 @@ pysimplegui = { version = "^5.0.0", optional = true }
 
 [tool.poetry.group.dev.dependencies]
 lk-logger = { version = "^6.0.6a0", source = "likianta" }
-lk-utils = { version = "^3.2.0a4", source = "likianta" }
+lk-utils = { version = "^3.3.0a12", source = "likianta" }
 pyapp-window = { version = "^2.2.0b2", source = "likianta" }
 pyinstrument = "^5.0.0"
-streamlit = { version = "^1.43.0", python = "^3.12" }
+streamlit = { version = "^1.45.0", python = "^3.12" }
 
 [[tool.poetry.source]]
 name = "tsinghua"
